Prevent modal from overflowing screen. Thanks shi#6969

--- a/scoreboard_frontend/src/index.css
+++ b/scoreboard_frontend/src/index.css
@@ -105,6 +105,11 @@ body {
   overflow-wrap: anywhere;
 }
 
+.modal-content {
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
 .sticky-left {
   position: sticky;
   left: 0;
